--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -78,6 +78,7 @@
         <item>30 seconds</item>
         <item>1 minute</item>
         <item>2 minutes</item>
+        <item>5 minutes</item>
         <item>10 minutes</item>
         <item>30 minutes</item>
     </string-array>
@@ -92,6 +93,8 @@
         <item>60000</item>
         <!-- Do not translate. -->
         <item>120000</item>
+        <!-- Do not translate. -->
+        <item>300000</item>
         <!-- Do not translate. -->
         <item>600000</item>
         <!-- Do not translate. -->
