Import revised translations.  DO NOT MERGE
Change-Id: I8e7d2652c85f2bd516881e11283af62ee760adb1

--- a/res/values-cs/arrays.xml
+++ b/res/values-cs/arrays.xml
@@ -45,7 +45,7 @@
     <item msgid="7589406073232279088">"1 minuta"</item>
     <item msgid="7001195990902244174">"2 minuty"</item>
     <item msgid="5721688686241190620">"10 minut"</item>
-    <item msgid="7156442995039264948">"30 min."</item>
+    <item msgid="7156442995039264948">"30 minut"</item>
   </string-array>
   <string-array name="tts_rate_entries">
     <item msgid="6041212618892492920">"Velmi pomalá"</item>
