--- a/res/values-sv/arrays.xml
+++ b/res/values-sv/arrays.xml
@@ -118,7 +118,7 @@
   <string-array name="usage_stats_display_order_types">
     <item msgid="9077371706468756228">"Användningstid"</item>
     <item msgid="1908750532762193304">"Starta räkneverk"</item>
-    <item msgid="1213951670006606353">"Namn på program"</item>
+    <item msgid="1213951670006606353">"Namn på app"</item>
   </string-array>
   <string-array name="wifi_eap_entries">
     <item msgid="8615575908717909498">"PEAP"</item>
