--- a/res/values-ja/arrays.xml
+++ b/res/values-ja/arrays.xml
@@ -37,7 +37,7 @@
   <string-array name="animations_summaries">
     <item msgid="4569165952409350897">"ウィンドウアニメーションを表示しない"</item>
     <item msgid="4460915688877708508">"一部のウィンドウアニメーションを表示する"</item>
-    <item msgid="488968798204105119">"すべてのウィンドウアニメーションを表示"</item>
+    <item msgid="488968798204105119">"すべてのウィンドウアニメーションを表示する"</item>
   </string-array>
   <string-array name="screen_timeout_entries">
     <item msgid="3342301044271143016">"15秒"</item>
@@ -151,7 +151,7 @@
   <string-array name="vibrate_entries">
     <item msgid="3388952299521009213">"常に使用"</item>
     <item msgid="6293147072807231256">"なし"</item>
-    <item msgid="1276641209451816572">"マナーモードがオンのときのみ"</item>
-    <item msgid="8418930333779132418">"マナーモードがオフのときのみ"</item>
+    <item msgid="1276641209451816572">"マナーモードがONのときのみ"</item>
+    <item msgid="8418930333779132418">"マナーモードがOFFのときのみ"</item>
   </string-array>
 </resources>
