Import revised translations.  DO NOT MERGE
Change-Id: I512bfadfc427f0676bce9e79c20babe006324ca1

--- a/res/values-ja/arrays.xml
+++ b/res/values-ja/arrays.xml
@@ -75,7 +75,7 @@
     <item msgid="8513729475867537913">"接続中..."</item>
     <item msgid="515055375277271756">"認証中..."</item>
     <item msgid="1943354004029184381">"IPアドレスを取得中..."</item>
-    <item msgid="4221763391123233270">"接続されました"</item>
+    <item msgid="4221763391123233270">"接続済み"</item>
     <item msgid="624838831631122137">"保留中"</item>
     <item msgid="7979680559596111948">"切断中..."</item>
     <item msgid="1634960474403853625">"切断されました"</item>
@@ -143,6 +143,9 @@
     <item msgid="535934025797984365">"CHAP"</item>
     <item msgid="8383098660619805783">"PAPまたはCHAP"</item>
   </string-array>
+    <!-- no translation found for apn_protocol_entries:0 (4852355456199302715) -->
+    <!-- no translation found for apn_protocol_entries:1 (4394161344888484571) -->
+    <!-- no translation found for apn_protocol_entries:2 (8084938354605535381) -->
   <string-array name="app_install_location_entries">
     <item msgid="8151497958991952759">"内部端末ストレージ"</item>
     <item msgid="3738430123799803530">"リムーバブルSDカード"</item>
