DO NOT MERGE Add support for additional System Update menu item
Change-Id: I21bf87b5d2805da672c0617a098258e0e2b78915

--- a/res/values/bools.xml
+++ b/res/values/bools.xml
@@ -20,4 +20,7 @@
     <bool name="has_intrusive_led">false</bool>
     <!-- Whether or not the dock settings are to be displayed for this device when docked -->
     <bool name="has_dock_settings">false</bool>
+
+    <!-- Display additional System Update menu if true -->
+    <bool name="config_additional_system_update_setting_enable">false</bool>
 </resources>
