Import revised translations.  DO NOT MERGE
Change-Id: Ic2e2fd3330cb069f55054e08aad153c1b342e0a4

--- a/res/values-cs/arrays.xml
+++ b/res/values-cs/arrays.xml
@@ -94,7 +94,7 @@
     <item msgid="8578370891960825148">"Neúspěšné"</item>
   </string-array>
   <string-array name="wifi_security">
-    <item msgid="1435933968767043814">"Otevřít"</item>
+    <item msgid="1435933968767043814">"Otevřená"</item>
     <item msgid="6318432659048829665">"WEP"</item>
     <item msgid="2966395706508338179">"WPA/WPA2 PSK"</item>
     <item msgid="9098390198768443435">"802.1x EAP"</item>
